{
    "name": "Controls",
    "maps": [
        {
            "name": "Game",
            "id": "cdc919a6-895b-4fb0-a407-f662da795bbd",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "af92822e-2586-4db2-9e0a-9c2dafba6c15",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "0486f05c-5aeb-4c72-949c-8cf5c6b35384",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "dbe5db5b-cd17-40af-ad4b-168a0b945db3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "82c9cc8d-1edf-49f4-8cf9-ce8fac6c1fbb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ControlUp",
                    "type": "Button",
                    "id": "0605f264-f128-4708-875f-267dd06c1eda",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DiscardControl",
                    "type": "Button",
                    "id": "a651bebd-3b32-49c3-a617-9e5eee994585",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "165ff629-af6f-47c2-8f65-0478729a2b97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "7735b4fe-1e08-40a6-86bd-6fcd55e9825a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8b6aa25c-d4bf-47d4-902d-f55b8e581e0e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a10a5134-24e3-44ae-b3e0-19fbe639cc87",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d83a551-bd4e-47a9-8de9-ff08b8b412bc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d8b08a8-167a-4e90-a7c2-6e4479cc6b0e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c607d53-5b26-4587-81c8-296f765c1de6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControlUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eac7a5c4-ee8c-40fb-a634-cbd8d5053549",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DiscardControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0afe1e7-1d3d-4199-9740-93972d696ed1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "681ee85a-962c-4c52-b012-f866cbcc3cef",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "dc173ac2-a707-44d9-a371-49edd55e83e5",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "efbd53a2-ffe4-46cd-999e-43355a6d6648",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Press",
                    "type": "Button",
                    "id": "e7aeeede-34c5-4eec-a07a-1b1d7210e57d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fd84e420-4eac-47e9-9a7c-7a822a0a52a7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1be93ac-6a3e-4a7c-b59e-de0cef3b073b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Press",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}